# RME-logger

./: DATABASE_ENCRYPTION_README.md  README.md  check_db.py  decrypt_database.py  encrypt_database.py  pyproject.toml  secure_launcher.py  test_db_encryption.py  test_direct_encryption.py  test_encrypted_navmed.py  test_final_mcp.py  test_mcp_demo.py  test_mcp_encryption.py  test_minimal_encryption.py  test_simple_debug.py  test_sqlcipher.py  windows_auth_launcher.py
memory/: README.md
memory/architecture/: system_overview.md
memory/development/: chat.md  sqlcipher_encryption_implementation.md
memory/features/: database_encryption.md
memory/index/: quick_reference.md
memory/user_interactions/: current_session.md
src/radiation_medical_exam/: __init__.py  server.py  server_refactored.py
src/radiation_medical_exam/data/: navmed_radiation_exam.db  navmed_radiation_exam.db.enc
src/radiation_medical_exam/database/: __init__.py  encrypted_db_manager.py  init_database.py  navmed_repository.py
src/radiation_medical_exam/handlers/: __init__.py  prompt_handlers.py  resource_handlers.py  tool_handlers.py
src/radiation_medical_exam/services/: __init__.py  examination_service.py  security_service.py  validation_service.py
src/radiation_medical_exam/utils/: init_navmed_database.py  navmed_database.py  pdf_processor.py
